--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -44,6 +44,12 @@ jobs:
         shell: bash -l {0}
         run: micromamba activate rtd
 
+      - name: install dev version again
+        # There is a bug in micromamba, which cd's out of the working-directory during the pip install of weldx.
+        # So the initial env creation lacks weldx, so we install it here.
+        shell: bash -l {0}
+        run: pwd && pip install -e . && pip install git+https://github.com/CagtayFabry/sphinx-asdf.git@sphinx-weldx
+
       - name: conda info
         shell: bash -l {0}
         run: conda info
