--- a/weldx/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/process/terms-1.0.0.yaml
@@ -19,7 +19,9 @@ base_process:
       type: string
     parameters:
       type: object
-      wx_property_tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-*"
+      oneOf:
+        - wx_property_tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-*"
+        - wx_property_tag: "tag:weldx.bam.de:weldx/core/time_series-1.*" # legacy_tag
     meta:
       type: object
   required: [base_process,manufacturer,power_source,parameters]
