fix version wildcards

--- a/weldx/schemas/weldx.bam.de/weldx/debug/test_property_tag-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/debug/test_property_tag-1.0.0.yaml
@@ -11,5 +11,5 @@ description: |
   So far only one specific tag can be used.
 type: object
 additionalProperties: true # must be true to allow any property
-wx_property_tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-*"
+wx_property_tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
 ...
