--- a/weldx/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/transformations/coordinate_system_hierarchy-1.0.0.yaml
@@ -9,115 +9,191 @@ description: |
   It stores information how the different coordinate systems are arranged towards each other. The basic data structure
   is a tree.
 type: object
-
 examples:
   -
-    - A CSM with two static transformations and no subsystems.
+    - An abstract example of a coordinate system hierarchy with nested subsystems and without data
     - |
       !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy-1.0.0>
-        name: Coordinate system manager 0
-        root_system_name: base
-        subsystems: []
-        coordinate_systems:
-        - !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-          name: workpiece
-          reference_system: base
-          transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
-        - !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-          name: tcp_wire
-          reference_system: workpiece
-          transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
-            time: !<asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0>
-              values: !core/ndarray-1.0.0
-                data: [0, 29000000000]
-                datatype: int64
-                shape: [2]
-              start: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-              end: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M29S}
-              min: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-              max: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M29S}
-            orientations: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
-              name: orientations
-              dimensions: [c, v]
-              dtype: <f8
-              data: !core/ndarray-1.0.0
-                data:
-                - [1.0, 0.0, 0.0]
-                - [0.0, -1.0, -1.2246467991473532e-16]
-                - [0.0, 1.2246467991473532e-16, -1.0]
-                datatype: float64
-                shape: [3, 3]
-            coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
-              name: coordinates
-              dimensions: [time, c]
-              dtype: <f8
-              data: !core/ndarray-1.0.0
-                data:
-                - [5.0, 0.0, 2.0]
-                - [295.0, 0.0, 2.0]
-                datatype: float64
-                shape: [2, 3]
-        subsystem_names: []
+        name: CSM
+        graph: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.0.0>
+          root_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+            name: R
+            attributes:
+              data: {}
+            edges:
+            - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+              direction: bwd
+              attributes:
+                defined: true
+                transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
+              target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                name: A
+                attributes:
+                  data: {}
+            - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+              direction: bwd
+              attributes:
+                defined: true
+                transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
+              target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                name: B
+                attributes:
+                  data: {}
+                edges:
+                - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+                  direction: bwd
+                  attributes:
+                    defined: true
+                    transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
+                  target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                    name: Y
+                    attributes:
+                      data: {}
+                    edges:
+                    - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+                      direction: bwd
+                      attributes:
+                        defined: true
+                        transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
+                      target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                        name: Z
+                        attributes:
+                          data: {}
+                        edges:
+                        - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+                          direction: bwd
+                          attributes:
+                            defined: true
+                            transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
+                          target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                            name: V
+                            attributes:
+                              data: {}
+        subsystems:
+        - common_node: B
+          data: []
+          members: [V, Z, Y, B]
+          name: Child
+          root_node: B
+          subsystems:
+          - common_node: Z
+            data: []
+            members: [V, Z]
+            name: ChildChild
+            root_node: Z
+            subsystems: []
 
-properties:
-  name:
-    type: string
 
-  root_system_name:
+definitions:
+  coordinate_system_node:
     description: |
-      Name of the root coordinate system
-    type: string
+      A graph node that represents a coordinate system.
+    allOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
+      - type: object
+        properties:
+          attributes:
+            type: object
+            properties:
+              data:
+                description: |
+                  An object that contains all the data attached to the coordinate system. The name of each data set
+                  is it's yaml key inside of the object.
+                type: object
+                anyOf:
+                  - wx_property_tag: "asdf://weldx.bam.de/weldx/tags/core/data_array-1.*"
+                  - wx_property_tag: "asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.*"
+          edges:
+            type: array
+            items:
+              $ref: "#/definitions/coordinate_transformation_edge"
+        required: [ attributes ]
 
-  reference_time:
+  coordinate_transformation_edge:
     description: |
-      A timestamp that serves as reference point for all attached coordinate systems.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
-      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*" # legacy_tag
+      A graph edge that represents the transformation between to coordinate systems.
+    allOf:
+    - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
+    - type: object
+      properties:
+        attributes:
+          type: object
+          properties:
+            transformation:
+              description: |
+                The transformation between two coordinate systems
+              tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.*"
+          required: [transformation]
+        target_node:
+          $ref: "#/definitions/coordinate_system_node"
+      required: [attributes]
 
-  subsystem_names:
+  subsystem_info:
     description: |
-      A list containing the names of subsystems that are directly attached to the main hierarchy. Nested subsystems
-      are excluded.
-    type: array
-    items:
-      type: string
-
-  subsystems:
-    description: |
-      A list containing the data of all subsystems including nested structures.
-    type: array
-    items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy_subsystem-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.*" # legacy_tag
-
-  coordinate_systems:
-    description: |
-      An array of all the coordinate systems' data. This includes their name, parent system and how they are arranged
-      towards their parent system.
-    type: array
-    items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.*" # legacy_tag
-
-  spatial_data:
+      A list of a coordinate system hierarchy's subsytems.
     type: array
     items:
       type: object
+      description: |
+        Information about a subsystem.
       properties:
-        coordinate_system:
-          type: string
         name:
+          description: |
+            Name of the subsystem.
           type: string
+        reference_time:
+          description: |
+            The reference time of the subsystem.
+          tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
+        common_node:
+          description: |
+            The coordinate system that is shared between the subsystem and its parent coordinate system hierarchy.
+          type: string
+        root_node:
+          description: |
+            The root node of the subsystem.
+          type: string
+        members:
+          description: |
+            The names of all coordinate systems that belong to the subsystem.
+          type: array
+          items:
+            type: string
         data:
-          oneOf:
-            - tag: "asdf://weldx.bam.de/weldx/tags/core/geometry/spatial_data-1.*"
-            - tag: "tag:weldx.bam.de:weldx/core/geometry/spatial_data-1.*" # legacy_tag
-      required: [coordinate_system, name, data]
+          description: |
+            The names of all data sets that belong to the subsystem.
+          type: array
+          items:
+            type: string
+        subsystems:
+          description: |
+            A list of nested subsytems.
+          $ref: "#/definitions/subsystem_info"
 
-propertyOrder: [name, root_system_name, reference_time, subsystems, subsystem_data, coordinate_systems, spatial_data]
-required: [name, root_system_name, coordinate_systems]
+properties:
+  name:
+    description: |
+      Name of the coordinate system hierarchy
+    type: string
+  reference_time:
+    description: |
+      The reference time of the coordinate systeme hierarchy.
+    tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
+  graph:
+    description:
+      A graph that describes how the different coordinate systems are organized.
+    allOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.*"
+      - type: object
+        properties:
+          root_node:
+            $ref: "#/definitions/coordinate_system_node"
+  subsystems:
+    description:
+      A list of all subsystems.
+    $ref: "#/definitions/subsystem_info"
+
+propertyOrder: [name, reference_time, graph, subsystems]
+required: [name, graph]
 flowStyle: block
 ...
