--- a/weldx/schemas/weldx.bam.de/weldx/core/transformations/coordinate_transformation-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/transformations/coordinate_transformation-1.0.0.yaml
@@ -1,38 +1,10 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "asdf://weldx.bam.de/weldx/schemas/core/transformations/coordinate_transformation-1.0.0"
+id: "tag:weldx.bam.de:weldx/core/transformations/coordinate_transformation-1.0.0"
 
 title: |
-  Schema that describes the transformation between 2 coordinate systems.
-description: |
-  TODO
-
-examples:
-  -
-    - A uniform coordinate transformation between a "base" and a "workpiece" system.
-    - |
-      !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-        name: workpiece
-        reference_system: base
-        transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
-  -
-    - |
-      A coordinate transformation describing a constant offset of -10 mm in z-direction between
-      the "tcp_wire" and "tcp_contact" systems
-    - |
-      !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-        name: tcp_contact
-        reference_system: tcp_wire
-        transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
-          coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
-            name: coordinates
-            dimensions: [c]
-            dtype: <f8
-            data: !core/ndarray-1.0.0
-              data: [0.0, 0.0, -10.0]
-              datatype: float64
-              shape: [3]
+  Legacy schema that describes the transformation between 2 coordinate systems.
 
 type: object
 properties:
