--- a/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.yaml
@@ -220,60 +220,80 @@ examples:
               shape: [2, 3]
         coordinate_systems: !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_system_hierarchy-1.0.0>
           name: Coordinate system manager 0
-          root_system_name: base
+          graph: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.0.0>
+            root_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+              name: base
+              attributes:
+                data: {}
+              edges:
+              - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+                direction: bwd
+                attributes:
+                  defined: true
+                  transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
+                target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                  name: workpiece
+                  attributes:
+                    data: {}
+                  edges:
+                  - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+                    direction: bwd
+                    attributes:
+                      defined: true
+                      transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
+                        time: !<asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0>
+                          values: !core/ndarray-1.0.0
+                            data: [0, 29000000000]
+                            datatype: int64
+                            shape: [2]
+                          start: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+                          end: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M29S}
+                          min: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
+                          max: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M29S}
+                        orientations: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
+                          name: orientations
+                          dimensions: [c, v]
+                          dtype: <f8
+                          data: !core/ndarray-1.0.0
+                            data:
+                            - [1.0, 0.0, 0.0]
+                            - [0.0, -1.0, -1.2246467991473532e-16]
+                            - [0.0, 1.2246467991473532e-16, -1.0]
+                            datatype: float64
+                            shape: [3, 3]
+                        coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
+                          name: coordinates
+                          dimensions: [time, c]
+                          dtype: <f8
+                          data: !core/ndarray-1.0.0
+                            data:
+                            - [5.0, 0.0, 2.0]
+                            - [295.0, 0.0, 2.0]
+                            datatype: float64
+                            shape: [2, 3]
+                    target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                      name: tcp_wire
+                      attributes:
+                        data: {}
+                      edges:
+                      - !<asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0>
+                        direction: bwd
+                        attributes:
+                          defined: true
+                          transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
+                            coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
+                              name: coordinates
+                              dimensions: [c]
+                              dtype: <f8
+                              data: !core/ndarray-1.0.0
+                                data: [0.0, 0.0, -10.0]
+                                datatype: float64
+                                shape: [3]
+                        target_node: !<asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0>
+                          name: tcp_contact
+                          attributes:
+                            data: {}
           subsystems: []
-          coordinate_systems:
-          - !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-            name: workpiece
-            reference_system: base
-            transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0> {}
-          - !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-            name: tcp_wire
-            reference_system: workpiece
-            transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
-              time: !<asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0>
-                values: !core/ndarray-1.0.0
-                  data: [0, 29000000000]
-                  datatype: int64
-                  shape: [2]
-                start: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-                end: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M29S}
-                min: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M0S}
-                max: !<asdf://weldx.bam.de/weldx/tags/time/timedelta-1.0.0> {value: P0DT0H0M29S}
-              orientations: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
-                name: orientations
-                dimensions: [c, v]
-                dtype: <f8
-                data: !core/ndarray-1.0.0
-                  data:
-                  - [1.0, 0.0, 0.0]
-                  - [0.0, -1.0, -1.2246467991473532e-16]
-                  - [0.0, 1.2246467991473532e-16, -1.0]
-                  datatype: float64
-                  shape: [3, 3]
-              coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
-                name: coordinates
-                dimensions: [time, c]
-                dtype: <f8
-                data: !core/ndarray-1.0.0
-                  data:
-                  - [5.0, 0.0, 2.0]
-                  - [295.0, 0.0, 2.0]
-                  datatype: float64
-                  shape: [2, 3]
-          - !<asdf://weldx.bam.de/weldx/tags/core/transformations/coordinate_transformation-1.0.0>
-            name: tcp_contact
-            reference_system: tcp_wire
-            transformation: !<asdf://weldx.bam.de/weldx/tags/core/transformations/local_coordinate_system-1.0.0>
-              coordinates: !<asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0>
-                name: coordinates
-                dimensions: [c]
-                dtype: <f8
-                data: !core/ndarray-1.0.0
-                  data: [0.0, 0.0, -10.0]
-                  datatype: float64
-                  shape: [3]
-          subsystem_names: []
         equipment:
         - &id008 !<asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.0.0>
           name: HKS P1000-S3
