--- a/weldx/schemas/weldx.bam.de/weldx/uuid-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/uuid-1.0.0.yaml
@@ -7,19 +7,16 @@ title: |
   Version 4 UUID
 description: |
   A version 4 UUID as specified by RFC 4122.
+  Represented in lowercase.
 
 examples:
   -
     - A version 4 UUID string
     - |
-      !<asdf://weldx.bam.de/weldx/tags/uuid-1.0.0>
-        uuid: 448414c4-da7a-4832-9219-5e6042c2e96e
+      !<asdf://weldx.bam.de/weldx/tags/uuid-1.0.0> 448414c4-da7a-4832-9219-5e6042c2e96e
 
-type: object
-properties:
-  uuid:
-    description: The UUID with characters in lowercase.
-    type: string
-    pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[4][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
-required: [uuid]
+
+type: string
+tag: "asdf://weldx.bam.de/weldx/tags/uuid-1.0.0"
+pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[4][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
 ...
