allow string and uuid simultaneously using anyOf

--- a/weldx/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
@@ -32,7 +32,7 @@ examples:
 type: object
 properties:
   name:
-    oneOf:
+    anyOf:
       - type: string
       - tag: "asdf://weldx.bam.de/weldx/tags/uuid-1.0.0"
   edges:
