update schemas for new + legacy support

--- a/weldx/schemas/weldx.bam.de/weldx/aws/design/base_metal-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/design/base_metal-1.0.0.yaml
@@ -32,7 +32,9 @@ properties:
   thickness:
     description: |
       Plate or sheet thickness, if tube, specifies wall thickness.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
   diameter:
     description: |
