--- a/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_for_procedure-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/process/shielding_gas_for_procedure-1.0.0.yaml
@@ -40,7 +40,9 @@ properties:
   torch_shielding_gas_flowrate:
     description: |
       Flow rate of shielding gas required or specified.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
   use_backing_gas:
     description: |
@@ -55,7 +57,9 @@ properties:
   backing_gas_flowrate:
     description: |
       Flowrate of backing gas.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
   use_trailing_gas:
     description: |
@@ -70,7 +74,9 @@ properties:
   trailing_shielding_gas_flowrate:
     description: |
       Flowrate of trailing gas during welding.
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
 
 
