--- a/weldx/schemas/weldx.bam.de/weldx/debug/test_unit_validator-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/debug/test_unit_validator-1.0.0.yaml
@@ -10,21 +10,25 @@ properties:
   length_prop:
     description: |
       a simple length quantity with unit validator
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
     wx_unit: "m"
 
   velocity_prop:
     description: |
       a simple velocity quantity
     allOf:
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
       - type: object
         wx_unit: "m/s"
 
   current_prop:
     description: |
       a current quantity of shape [2,2]
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
   nested_prop:
     description: |
@@ -33,10 +37,14 @@ properties:
     properties:
       q1:
         description: a nested length of shape [3,3]
-        tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+        oneOf:
+          - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+          - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
       q2:
         description: a volume
-        tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+        oneOf:
+          - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+          - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
     wx_unit:
       q1: "m"
 
