--- a/weldx/schemas/weldx.bam.de/weldx/aws/design/joint_penetration-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/design/joint_penetration-1.0.0.yaml
@@ -20,7 +20,9 @@ properties:
   root_penetration:
     description: |
       The distance the weld metal extends into the root joint
-    tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    oneOf:
+      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 
   groove_weld_size:
     description: |
