--- a/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/datamodels/single_pass_weld-1.0.0.yaml
@@ -73,7 +73,9 @@ properties:
           diameter:
             description: |
               The diameter of the welding wire.
-            tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+            oneOf:
+              - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+              - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
             wx_unit: "m"
             wx_shape: [1]
           class:
@@ -162,7 +164,9 @@ properties:
           seam_length:
             description: |
               Length of the linear weld seam.
-            tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+            oneOf:
+              - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-1.*"
+              - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
             wx_unit: "m"
         required: [groove_shape, seam_length]
     required: [base_metal, geometry]
