--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       args: [--markdown-linebreak-ext=md]
     - id: end-of-file-fixer
     - id: check-yaml
+      exclude: devtools/conda.recipe/meta.yaml # doesn't play nice with jinja
     - id: no-commit-to-branch
 -   repo: https://github.com/psf/black
     rev: 21.7b0
