--- a/weldx/schemas/weldx.bam.de/legacy/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0.yaml
@@ -1,10 +1,24 @@
 %YAML 1.1
 ---
 $schema: "http://stsci.edu/schemas/yaml-schema/draft-01"
-id: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy-1.0.0"
+id: "http://weldx.bam.de/schemas/weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0"
+tag: "tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0"
 
 title: |
-  Legacy schema that describes a subsystem of a local coordinate system hierarchy
+  Schema that describes a subsystem of a local coordinate system hierarchy
+description: |
+  It contains the data that is necessary to describe a subsystem.
+
+examples:
+  -
+    - A subsystem assignment of the coordinate systems workpiece, user_frame, T1 and T2.
+    - |
+      !<tag:weldx.bam.de:weldx/core/transformations/coordinate_system_hierarchy_subsystem-1.0.0>
+        name: Subsystem T
+        parent_system: Base CSM
+        root_cs: workpiece
+        members: [workpiece, user_frame, T1, T2]
+        subsystem_names: []
 
 type: object
 properties:
@@ -21,9 +35,7 @@ properties:
   reference_time:
     description: |
       A timestamp that serves as reference point for all attached coordinate systems.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
-      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*" # legacy_tag
+    tag: "tag:weldx.bam.de:weldx/time/timestamp-1.0.0"
 
   root_cs:
     description: |
