--- a/weldx/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/dataset-1.0.0.yaml
@@ -20,25 +20,19 @@ properties:
       An array of dimensions.
     type: array
     items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/dimension-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/dimension-1.*" # legacy_tag
+      tag: "asdf://weldx.bam.de/weldx/tags/core/dimension-1.*"
   coordinates:
     description: |
       An array of variables that represent coordinates.
     type: array
     items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/variable-1.*" # legacy_tag
+      tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
   variables:
     description: |
       An array of variables.
     type: array
     items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/variable-1.*" # legacy_tag
+      tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
 
 required: [dimensions, coordinates, variables]
 propertyOrder: [attributes, dimensions, coordinates, variables]
