--- a/weldx/schemas/weldx.bam.de/weldx/core/file-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/file-1.0.0.yaml
@@ -40,15 +40,11 @@ properties:
   created:
     description: |
       The timestamp when the file was created.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
-      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
   modified:
     description: |
       The timestamp when the file was modified last.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
-      - tag: "tag:weldx.bam.de:weldx/time/timestamp-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/time/timestamp-1.*"
   hostname:
     description: |
       The name of the host machine accessing the file.
