--- a/weldx/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
@@ -38,9 +38,7 @@ properties:
   edges:
     type: array
     items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
-        - tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.*" # legacy_tag
+      tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
   attributes:
     type: object
 
