--- a/weldx/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/time_series-1.0.0.yaml
@@ -60,9 +60,7 @@ oneOf:
       expression:
         description: |
           A mathematical expression that describes the time dependent behaviour.
-        oneOf:
-          - tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.*"
-          - tag: "tag:weldx.bam.de:weldx/core/mathematical_expression-1.*" # legacy_tag
+        tag: "asdf://weldx.bam.de/weldx/tags/core/mathematical_expression-1.*"
       unit:
         description: |
           Resulting unit of the data when the expression is evaluated.
@@ -80,9 +78,7 @@ oneOf:
       time:
         description: |
           A set of time deltas.
-        oneOf:
-          - tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.*"
-          - tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.*" # legacy_tag
+        tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.*"
       unit:
         description: |
           Unit of the data.
