--- a/weldx/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/equipment/measurement_equipment-1.0.0.yaml
@@ -35,15 +35,11 @@ properties:
   sources:
     type: array
     items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/measurement/source-1.*"
-        - tag: "tag:weldx.bam.de:weldx/measurement/source-1.*" # legacy_tag
+      tag: "asdf://weldx.bam.de/weldx/tags/measurement/source-1.*"
   transformations:
     type: array
     items:
-      oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.*"
-        - tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.*" # legacy_tag
+      tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.*"
 
 propertyOrder: [name, sources, transformations]
 required: [name]
