--- a/weldx/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/signal-1.0.0.yaml
@@ -34,9 +34,7 @@ properties:
   data:
     description: |
       Measurement data that was produced by the signal.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
-      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
 
 
 propertyOrder: [signal_type, unit, data]
