--- a/weldx/schemas/weldx.bam.de/weldx/measurement/source-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/source-1.0.0.yaml
@@ -27,15 +27,11 @@ properties:
   output_signal:
     description: |
       The signal that is produced by the source.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.*"
-      - tag: "tag:weldx.bam.de:weldx/measurement/signal-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.*"
   error:
     description: |
       The error of the source.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.*"
-      - tag: "tag:weldx.bam.de:weldx/measurement/error-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/measurement/error-1.*"
 
 required: [name, output_signal]
 propertyOrder: [name, output_signal, error]
