--- a/weldx/schemas/weldx.bam.de/weldx/process/CLOOS/spray_arc-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/process/CLOOS/spray_arc-1.0.0.yaml
@@ -14,14 +14,10 @@ allOf:
         type: object
         properties:
           impedance:
-            oneOf:
-              - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
-              - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*" # legacy_tag
+            tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
             wx_unit: "percent"
           characteristic:
-            oneOf:
-              - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
-              - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*" # legacy_tag
+            tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
             wx_unit: "V/A"
         required: [impedance,characteristic]
 
