remove last 1.0.0 tag version references

--- a/weldx/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/transformations/local_coordinate_system-1.0.0.yaml
@@ -106,8 +106,8 @@ properties:
       An ndarray containing the coordinates.
 
     oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.0.0"
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/variable-1.*"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
   orientations:
     description: |
       An ndarray containing the orientations.
