--- a/weldx/schemas/weldx.bam.de/weldx/measurement/measurement_chain-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/measurement_chain-1.0.0.yaml
@@ -76,7 +76,7 @@ definitions:
     description: |
       A graph node that represents a measurement signal.
     allOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
       - type: object
         properties:
           attributes:
@@ -98,7 +98,7 @@ definitions:
     description: |
       A graph edge that represents a signal transformation.
     allOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
       - type: object
         properties:
           attributes:
@@ -136,7 +136,7 @@ properties:
     description: |
       The measurement chain depicted by a graph. Signals are represented by the nodes and transformations by the edges.
     allOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.*"
       - type: object
         properties:
           root_node:
