--- a/weldx/schemas/weldx.bam.de/weldx/unit/quantity-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/unit/quantity-1.0.0.yaml
@@ -44,6 +44,6 @@ properties:
   unit:
     description: |
       The unit corresponding to the values
-    tag: "asdf://weldx.bam.de/weldx/tags/unit/unit-1.0.0"
+    tag: "asdf://weldx.bam.de/weldx/tags/unit/unit-1.*"
 required: [value, unit]
 ...
