--- a/weldx/schemas/weldx.bam.de/weldx/uuid-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/uuid-1.0.0.yaml
@@ -17,6 +17,6 @@ examples:
 
 
 type: string
-tag: "asdf://weldx.bam.de/weldx/tags/uuid-1.0.0"
+tag: "asdf://weldx.bam.de/weldx/tags/uuid-1.*"
 pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[4][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$"
 ...
